<resources>
    <string name="app_name">Базар</string>
    <!-- Strings related to API -->
    <string name="api_url">http://api.shop.projects.investsoft.org/</string>
    <string name="api_login">auth/login</string>
    <string name="api_password">auth/password</string>
    <string name="api_user_action">auth/user</string>
    <!-- Strings related to config-->
    <string name="config">org.investsoft.bazar.cfg</string>
    <!-- Common strings -->
    <string name="email">Email</string>
    <string name="password">Пароль</string>
    <string name="old_password">Старый пароль</string>
    <string name="new_password">Новый пароль</string>
    <string name="passcode_default">Введите код блокировки</string>
    <string name="passcode_confirm">Повторите введенный код блокировки</string>
    <string name="passcode_denied">Неправильный код</string>
    <string name="delete_char">Стереть</string>
    <string name="dialog_ok">Да</string>
    <string name="dialog_no">Отмена</string>
    <string name="dialog_logout">Вы уверены, что хотите выйти?</string>
    <string name="dialog_logout_title">Выход</string>
    <!-- Strings related to buttons -->
    <string name="action_sign_in">Войти</string>
    <string name="action_registration">Зарегистрироваться</string>
    <string name="action_change">Изменить</string>
    <string name="action_update_info">Обновить информацию</string>
    <!-- Strings related to registration -->
    <string name="title_activity_registration">Регистрация</string>
    <!-- Strings related to user -->
    <string name="lastname">Фамилия</string>
    <string name="name">Имя</string>
    <string name="surname">Отчество</string>
    <string name="phone">Телефон</string>
    <!-- Strings related to async tasks -->
    <string name="async_common">Пожалуйста, подождите</string>
    <string name="async_reg">Создание пользователя</string>
    <string name="async_login">Проверка учетных данных</string>
    <!-- Strings related to fast popup messages -->
    <string name="toast_update_user_info">Пользовательские данные обновлены</string>
    <!-- Strings related to errors -->
    <string name="error_invalid_user_info">Потеряна информация о пользователе. Перелогиньтесь</string>
    <string name="error_incorrect_password">Неправильный пароль</string>
    <string name="error_field_required">Поле обязательно для заполнения</string>
    <string name="error_invalid_email">Email не корректен</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Strings related to menus -->
    <string name="menu_additional">Дополнительно</string>
    <string name="preferences">Настройки</string>
    <string name="menu_user">Пользователь</string>
    <string name="about">Обо мне</string>
    <string name="main">Главная</string>
    <string name="logout">Выйти</string>

    <!-- Strings related to preferences -->
    <string name="preferences_header_account">Учетная запись</string>
    <string name="preferences_header_security">Безопасность</string>
    <string name="change_password">Смена пароля</string>
    <string name="preferences_title_rememberMe">Запомнить профиль</string>
    <string name="preferences_title_passcode">Блокировка PIN-кодом</string>
    <string name="preferences_title_autoLockIn">Интервал блокировки</string>
    <!--<string name="preferences_title_">org.investsoft.bazar.action.ACTION_LOGOUT</string>-->
    <!--<string name="preferences_title_">org.investsoft.bazar.action.ACTION_LOGOUT</string>-->
    <!--<string name="preferences_title_">org.investsoft.bazar.action.ACTION_LOGOUT</string>-->
    <!--<string name="preferences_title_">org.investsoft.bazar.action.ACTION_LOGOUT</string>-->

    <string name="preferences_summary_rememberMe">Выполнять вход в приложение, используя последние учетные данные</string>
    <string name="preferences_summary_passcode">Запрашивать PIN-код при возобновлении работы с приложением</string>
    <!--<string name="preferences_summary_">org.investsoft.bazar.action.ACTION_LOGOUT</string>-->
    <!--<string name="preferences_summary_">org.investsoft.bazar.action.ACTION_LOGOUT</string>-->
    <!--<string name="preferences_summary_">org.investsoft.bazar.action.ACTION_LOGOUT</string>-->
    <!--<string name="preferences_summary_">org.investsoft.bazar.action.ACTION_LOGOUT</string>-->
    <!--<string name="preferences_summary_">org.investsoft.bazar.action.ACTION_LOGOUT</string>-->
    <!--<string name="preferences_summary_">org.investsoft.bazar.action.ACTION_LOGOUT</string>-->
    <!--<string name="preferences_summary_">org.investsoft.bazar.action.ACTION_LOGOUT</string>-->
    <!--<string name="preferences_summary_">org.investsoft.bazar.action.ACTION_LOGOUT</string>-->
</resources>
